php/include/pdf_oxide.h

typedef struct FfiAnnotationList FfiAnnotationList;
typedef struct FfiFormFieldList FfiFormFieldList;
typedef struct FfiRenderedImage FfiRenderedImage;
typedef struct FfiRenderedImage FfiRenderedImage;
typedef struct FfiTableList FfiTableList;
typedef struct FfiUaResults FfiUaResults;
void pdf_oxide_annotation_list_free(FfiAnnotationList *handle);
uint32_t pdf_oxide_annotation_get_color(const FfiAnnotationList *annotations,
                                        int32_t index,
                                        int32_t *error_code);
int32_t pdf_document_sign(void *document_handle,
                          const void *certificate_handle,
                          const char *reason,
                          const char *location,
                          int32_t *error_code);
int32_t pdf_document_get_signature_count(const void *document_handle, int32_t *error_code);
void pdf_rendered_image_free(FfiRenderedImage *handle);
bool pdf_pdf_ua_is_accessible(const FfiUaResults *results, int32_t *error_code);
int32_t pdf_pdf_ua_error_count(const FfiUaResults *results);
int32_t pdf_oxide_table_count(const FfiTableList *tables);
int32_t pdf_oxide_table_get_row_count(const FfiTableList *tables,
                                      int32_t index,
                                      int32_t *error_code);
int32_t pdf_oxide_table_get_col_count(const FfiTableList *tables,
                                      int32_t index,
                                      int32_t *error_code);
void pdf_oxide_table_list_free(FfiTableList *handle);
int32_t pdf_oxide_form_field_count(const FfiFormFieldList *fields);
char *pdf_oxide_form_field_get_name(const FfiFormFieldList *fields,
                                    int32_t index,
                                    int32_t *error_code);
void pdf_oxide_form_field_list_free(FfiFormFieldList *handle);
void *pdf_ocr_engine_create(const char *det_model_path,
                            const char *rec_model_path,
                            const char *dict_path,
                            int32_t *error_code);