ruby/lib/pdf_oxide/ffi/bindings.rb


      # Image extraction functions
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_all_images (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_image (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_font (1 line)

      # Layout and structure functions
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_layout (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_with_layout (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_with_bbox (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_detect_columns (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_detect_tables (1 line)

      # Search functions
      # REMOVED phantom (no upstream symbol): :pdf_document_search_regex (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_search_in_range (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_search_in_area (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_search_annotations (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_count_text_occurrences (1 line)

      # Text functions
      # REMOVED phantom (no upstream symbol): :pdf_document_get_text_with_coordinates (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_unique_characters (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_text_statistics (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_replace_text (1 line)

      # Analysis functions
      # REMOVED phantom (no upstream symbol): :pdf_document_analyze_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_complexity_score (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_content_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_text_density (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_image_density (1 line)

      # Link extraction functions
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_links (1 line)

      # Embedded files functions
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_embedded_files (1 line)

      # Font usage functions
      # REMOVED phantom (no upstream symbol): :pdf_document_get_font_usage (1 line)

      # OCR functions
      # REMOVED phantom (no upstream symbol): :pdf_document_apply_ocr (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_ocr_page (1 line)
      # REMOVED duplicate declaration: :pdf_ocr_engine_create (1 line)

      # Signature functions
      # REMOVED duplicate declaration: :pdf_document_sign (1 line)
      attach_function :pdf_document_get_signature_count, [:pointer, :pointer], :int32

      # Save functions
      # REMOVED phantom (no upstream symbol): :pdf_document_save (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_save_incremental (1 line)

      # Metadata set functions
      # REMOVED phantom (no upstream symbol): :pdf_document_set_title (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_set_author (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_set_subject (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_set_keywords (1 line)

      # Compliance validation functions
      # REMOVED phantom (no upstream symbol): :pdf_document_validate_pdf_a (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_validate_pdf_x (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_validate_pdf_ua (1 line)

      # Conversion functions
      # REMOVED phantom (no upstream symbol): :pdf_convert_to_pdf_ua (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_convert_to_pdf_x (1 line)

      # Extraction strategy functions
      # REMOVED phantom (no upstream symbol): :pdf_create_extraction_strategy (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_strategy_get_description (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_strategy_recommends_ocr (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_strategy_free (1 line)

      # Rendering functions
      # REMOVED phantom (no upstream symbol): :pdf_render_page_to_bytes (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_save (1 line)
      # REMOVED duplicate declaration: :pdf_rendered_image_free (1 line)

      # Outline functions
      # REMOVED phantom (no upstream symbol): :pdf_document_get_outline_dest_page (1 line)

      # List helper functions
      # REMOVED phantom (no upstream symbol): :pdf_oxide_column_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_column_get_bbox (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_column_list_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_embedded_file_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_embedded_file_get_name (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_embedded_file_get_size (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_embedded_file_list_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_font_get_family (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_font_usage_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_font_usage_get_name (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_font_usage_get_page_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_font_usage_is_embedded (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_font_usage_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_image_get_name (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_image_get_color_space (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_link_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_link_get_url (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_link_get_bbox (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_link_list_free (1 line)
      attach_function :pdf_oxide_table_count, [:pointer], :int32
      # REMOVED phantom (no upstream symbol): :pdf_oxide_table_get_bbox (1 line)
      attach_function :pdf_oxide_table_get_row_count, [:pointer, :int32], :int32
      attach_function :pdf_oxide_table_get_col_count, [:pointer, :int32], :int32
      attach_function :pdf_oxide_table_list_free, [:pointer], :void
      # REMOVED phantom (no upstream symbol): :pdf_oxide_ocr_result_get_text (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_ocr_result_confidence (1 line)

      # Certificate functions
      # REMOVED phantom (no upstream symbol): :pdf_certificate_get_serial_number (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_certificate_get_valid_from (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_certificate_get_valid_to (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_certificate_get_thumbprint (1 line)

      # PDF/X compliance functions
      # REMOVED phantom (no upstream symbol): :pdf_pdf_x_warning_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_x_get_warning (1 line)

      # PDF/UA compliance functions
      # REMOVED duplicate declaration: :pdf_pdf_ua_error_count (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_ua_is_accessible (1 line)

      # Modification date function
      # REMOVED phantom (no upstream symbol): :pdf_document_get_modification_date (1 line)

      # Extract pages function
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_pages (1 line)

      # ============================================================
      # FINAL REMAINING MANAGER SUPPORT FUNCTIONS
      # ============================================================

      # Annotation modification functions
      # REMOVED phantom (no upstream symbol): :pdf_document_add_highlight (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_add_underline (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_add_strikeout (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_add_text_annotation (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_delete_annotation (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_flatten_annotations (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_annotation_count (1 line)

      # Barcode functions
      # REMOVED phantom (no upstream symbol): :pdf_document_add_qr_code (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_add_barcode (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_extract_barcodes (1 line)

      # Signature functions
      # REMOVED phantom (no upstream symbol): :pdf_document_add_signature (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_verify_signature (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_signature_signer (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_signature_timestamp (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_signature_status (1 line)

      # Form field functions
      # REMOVED phantom (no upstream symbol): :pdf_document_flatten_forms (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_form_field_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_form_field_value (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_form_field_flags (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_set_form_field_value (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_reset_form_fields (1 line)

      # Document utility functions
      # REMOVED phantom (no upstream symbol): :pdf_document_get_file_size (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_metadata (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_unlock_with_password (1 line)

      # XFA function alias
      # REMOVED phantom (no upstream symbol): :pdf_document_has_xfa_form (1 line)

      # Annotation list helper functions
      # REMOVED phantom (no upstream symbol): :pdf_oxide_annotation_get_text (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_annotation_get_bbox (1 line)
      attach_function :pdf_oxide_annotation_get_color, [:pointer, :int32], :int32
      attach_function :pdf_oxide_annotation_list_free, [:pointer], :void

      # Form field list helper functions
      attach_function :pdf_oxide_form_field_count, [:pointer], :int32
      attach_function :pdf_oxide_form_field_get_name, [:pointer, :int32], :string
      attach_function :pdf_oxide_form_field_list_free, [:pointer], :void

      # Signature helper functions
      # REMOVED phantom (no upstream symbol): :pdf_oxide_signature_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_signature_get_signer (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_signature_get_timestamp (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_signature_get_status (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_signature_get_reason (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_signature_get_location (1 line)
